Se pulió el esquema de turno cuenta con toda la info que analizan en el CUBO y mucha más que sirve para alimentaar los "circulos lasd", se contruyo el esquema de servicios y de asesores

--- a/public/app/html/nav-bar.html
+++ b/public/app/html/nav-bar.html
@@ -16,6 +16,7 @@
 			<li><a ui-sref="Cliente">Cliente</a></li>
 			<li><a ui-sref="Asesor">Asesor</a></li>
 			<li><a ui-sref="Supervisor">SuperVisor</a></li>
+			<li><a ui-sref="Administrador">Administrador</a></li>
 			<li><a href="" data-toggle="dropdown">Contactos <span class="caret"></span></a>
 				<ul class="dropdown-menu">
 					<li><a href="">Gerente</a></li>
