--- a/public/app/html/acordeon.html
+++ b/public/app/html/acordeon.html
@@ -64,7 +64,7 @@
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Tiempo de Espera</label>
 						<md-input-container>
-  						 <input type="text" ng-model="sessionItem.infoTurno.tiempo_espera">
+  						 <input type="text" ng-model="sessionItem.infoTurno.tiempo_espera" aria-label="tiempoEspera">
 						</md-input-container>
 						<span flex></span>
 					</div>
@@ -72,7 +72,7 @@
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Motivo</label>
 						<md-input-container>
-  						 <input type="text" ng-model="sessionItem.infoTurno.motivo">
+  						 <input type="text" ng-model="sessionItem.infoTurno.motivo" aria-label="motivo">
 						</md-input-container>
 						<span flex></span>
 					</div>
@@ -80,7 +80,7 @@
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Area </label>
 						<md-input-container>
-  						 <input type="text" ng-model="sessionItem.infoTurno.area">
+  						 <input type="text" ng-model="sessionItem.infoTurno.area" aria-label="area">
 						</md-input-container>
 						<span flex></span>
 					</div>
@@ -113,24 +113,7 @@
 						</md-select>
 						<span flex></span>
 					</div>
-					<!-- propuesta material -->
-
-					<div class="form-group">
-						<label class="col-sm-2 control-label">Servicio</label>
-						<div class="col-sm-10">
-							<select class="form-control" ng-model="sessionItem.infoTurno.servicio" ng-options="item.servicio as item.servicio.nombre for item in servicios">
-							</select>
-						</div>
-					</div>
-					
-					<div class="form-group">				
-						<label for="" class="col-sm-2 control-label">Subservicio</label>
-						<div class="col-sm-10">
-							<select class="form-control" ng-model="sessionItem.infoTurno.sub_servicio" ng-options="subitem as subitem.nombre_subservicio for subitem in subservicios |filter:{serv_id:sessionItem.infoTurno.servicio.sid}">
-								
-							</select>
-						</div>	
-					</div>
+					<!-- propuesta material -->				
 
 					<div class="form-group">				
 						<label for="" class="col-sm-2 control-label">Observaciones</label>
