--- a/public/app/html/Administrador.html
+++ b/public/app/html/Administrador.html
@@ -19,12 +19,16 @@
 	
 	
 	<br>
-		<div class="md-whiteframe-z1" ng-repeat="tienda in tiendas | filter:{regional:regionalp}"flex>
+		<div class="md-whiteframe-z1" ng-repeat="x in tiendas" flex>
 			<div layout="row" layout-align="start center" layout-padding>
-					{{tienda.nombre_sucursal}} <span flex></span>{{tienda.codigo_pos}}
+					{{x.nombre_sucursal}} <span flex></span>{{x.codigo_pos}}
 			</div>
 
 		</div>
 
 	</div>
+</div>
+
+<div class="col-md-3">
+	<button class="btn btn-success" ng-click="crearTiendas()"> Guardar tiendas</button>
 </div>
