--- a/public/app/index.html
+++ b/public/app/index.html
@@ -32,7 +32,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.js"></script>
 
+<!--Socket.io -->
+<script src="/socket.io/socket.io.js"></script>
 <!-- Scripts de la app -->
+<script src="js/Services/StromServices.js"></script>
 <script src="js/Directives/StromDirectives.js"></script>
 <script src="js/app.js"></script>
 <script language="JavaScript">
