--- a/public/app/html/acordeon.html
+++ b/public/app/html/acordeon.html
@@ -35,9 +35,9 @@
 
 		<div id="item2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 			<div class="panel-body">
-				<p><strong>Tipo de Documento :</strong> {{sessionItem.cliente.tipo_doc}}</p>
-				<p><strong>N° Documento :</strong> {{sessionItem.cliente.n_documento}}</p>
-				<p><strong>Nombre del Cliente :</strong> {{sessionItem.cliente.nombre_cliente}}</p>
+				<p><strong>Tipo de Documento :</strong> {{sessionItem.cliente.tipo_documento}}</p>
+				<p><strong>N° Documento :</strong> {{sessionItem.cliente.numero_documento}}</p>
+				<p><strong>Nombre del Cliente :</strong> {{sessionItem.cliente.nombre}}</p>
 				<p><strong>Codigo :</strong> {{sessionItem.cliente.codigo}}</p>
 			</div>
 		</div>
