simula creación y toma de turno

--- a/public/app/html/Asesor.html
+++ b/public/app/html/Asesor.html
@@ -5,10 +5,11 @@
 		</thead>
 		<tbody>
 			<tr ng-repeat="answer in answers | filter:{$:'Pendiente por Atencion'} |limitTo:1">
-				<td>{{answer.turno.toma_de_turno.numero_linea_tigo}}</td>
-				<td>{{answer.turno.toma_de_turno.nombre_pantalla}}</td>
-				<td>{{answer.turno.toma_de_turno.motivo_visita}}</td>
-				<td><button ng-click="tomarTurno(answer._id)">tomar turno</button></td>
+				<td>{{answer.turno.client.lineNumber}}</td>
+				<td>{{answer.turno.client.screenName}}</td>
+				<td>{{answer.turno.motivoVisita}}</td>
+				<td>{{answer._id}}</td>
+				<td><button ng-click="tomarTurno(answer._id)">tomar turno</button></td>				
 			</tr>
 		</tbody>
 	</table>
@@ -19,26 +20,16 @@
 </div>
 <div class="col-md-3">
 
-	<!--Solo para saber que turno selecciono -->
-	<p>-- {{atencion.turno.toma_de_turno.numero_linea_tigo}}</p>{{atencion.turno.atencion_a_turno.codigo_terminal}}--{{atencion.turno.atencion_a_turno.codigo_asesor}}
+	<hr>
 
-	<form  novalidate>
-		<div class="form-group">
-			<label for="">Codigo Terminal</label>
-			<input type="text" class="form-control" ng-model="atencion.codigo_terminal">
-		</div>
-		<div class="form-group">
-			<label for="">Codigo Asesor</label>
-			<input type="text" class="form-control" ng-model="atencion.codigo_asesor">
-		</div>
-
-		<br><br><br><br>
-		<button type="submit" class="btn btn-success" ng-click="updateTurno(atencion)"> AtencionTurno</button>
-
-	</form>
-
-	<br><br><br>
-
+  <md-input-container>
+  <md-select ng-model="asesor.toma" placeholder="Selecciona un asessor">
+    <md-option ng-value="asesor" ng-repeat="asesor in asesores">{{asesor.name}} {{asesor.lastName}}</md-option>
+  </md-select>
+</md-input-container>
+<hr>
+	{{asesor.toma}}
+<div>
+<div class="col-md-1">
 	
-
 </div>
