--- a/public/app/html/acordeon.html
+++ b/public/app/html/acordeon.html
@@ -35,10 +35,10 @@
 
 		<div id="item2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 			<div class="panel-body">
-				<p><strong>Tipo de Documento :</strong> {{sessionItem.cliente.tipo_documento}}</p>
-				<p><strong>N° Documento :</strong> {{sessionItem.cliente.numero_documento}}</p>
-				<p><strong>Nombre del Cliente :</strong> {{sessionItem.cliente.nombre}}</p>
-				<p><strong>Codigo :</strong> {{sessionItem.cliente.codigo}}</p>
+				<p><strong>Tipo de Documento :</strong> {{sessionItem.turno.client.idType}}</p>
+				<p><strong>N° Documento :</strong> {{sessionItem.turno.client.idNumber}}</p>
+				<p><strong>Nombre del Cliente :</strong> {{sessionItem.turno.client.clientName}}</p>
+				<p><strong>Codigo :</strong> {{sessionItem.turno.client.lineNumber}}</p>
 			</div>
 		</div>
 
@@ -49,7 +49,7 @@
 	<div class="panel panel-default">
 
 		<div class="panel-heading" role="tab" id="headingOne" data-toggle="collapse" data-target="#item3" aria-expanded="true" aria-controls="item1" data-parent="#accordion" style="cursor: pointer;" >
-			<h4 class="panel-title" ng-click="cerrarTurno()">
+			<h4 class="panel-title">
 				<span class="titulo">
 					Informacion del Turno
 				</span>
@@ -59,8 +59,7 @@
 		<div id="item3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 			<div class="panel-body">
 				
-					<p><strong>Numerocel:</strong>{{sessionItem.infoTurno.servicio.nombre}}</p>
-					<p><strong>Tiempo de Espera :</strong> {{sessionItem.infoTurno.tiempo_espera}}</p>
+					<p><strong>NumeroCel:</strong>{{sessionItem.turno.client.LineNumber}}</p>
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Tiempo de Espera</label>
 						<md-input-container>
@@ -95,7 +94,7 @@
 					<!-- propuesta material -->
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Servicio</label>
-						<md-select ng-model="sessionItem.infoTurno.servicio" placeholder="Escoja por favor un Servicio">
+						<md-select ng-model="sessionItem.turno.infoTurno.services" placeholder="Escoja por favor un Servicio">
 
 							<md-option ng-value="item.servicio" ng-repeat="item in servicios">{{item.servicio.nombre}}
 							</md-option>
