afinando modelos sobre todos los arrays

--- a/public/app/html/Asesor.html
+++ b/public/app/html/Asesor.html
@@ -32,4 +32,8 @@
 <div>
 <div class="col-md-1">
 	{{sessionItem.turno.infoTurno.services.nombre}}
+
+	{{sessionItem.turno.infoTurno.service}}
+
+	{{sessionItem.turno.infoTurno.service.subServices}}
 </div>
