--- a/public/app/html/acordeon.html
+++ b/public/app/html/acordeon.html
@@ -94,9 +94,9 @@
 					<!-- propuesta material -->
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>
 						<label flex="15" flex-sm="100">Servicio</label>
-						<md-select ng-model="sessionItem.turno.infoTurno.services" placeholder="Escoja por favor un Servicio">
+						<md-select ng-model="sessionItem.turno.infoTurno.service" placeholder="Escoja por favor un Servicio">
 
-							<md-option ng-value="item.servicio" ng-repeat="item in servicios">{{item.servicio.nombre}}
+							<md-option ng-value="item.service" ng-repeat="item in servicios">{{item.service.serviceName}}
 							</md-option>
 						</md-select>
 						<span flex></span>
@@ -104,10 +104,21 @@
 
 					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>				
 						<label flex="15" flex-sm="100">Subservicio</label>
-						<md-select  ng-model="sessionItem.turno.infoTurno.sub_servicio" placeholder="Ecoja por favor un subservicio">
+						<md-select  ng-model="sessionItem.turno.infoTurno.service.subServices[0]" placeholder="Ecoja por favor un subservicio" ng-change="addSub(sessionItem.turno.infoTurno.service.subServices[0])">
 						
-							<md-option ng-value="subitem" ng-repeat="subitem in subservicios |filter:{$:sessionItem.infoTurno.servicio.sid}">
-							{{subitem.subservicio.nombre_subservicio}}
+							<md-option ng-value="subitem" ng-repeat="subitem in subservicios |filter:{$:sessionItem.turno.infoTurno.service.serviceId}">
+							{{subitem.subServiceName}}
+							</md-option>								
+						</md-select>
+						<span flex></span>
+					</div>
+
+					<div layout="row" layout-sm="column" layout-align="start center" layout-align-sm="center start" layout-margin>				
+						<label flex="15" flex-sm="100">Subservicio</label>
+						<md-select  ng-model="sessionItem.turno.infoTurno.service.subServices[1]" placeholder="Ecoja por favor un subservicio" ng-change="addSub(sessionItem.turno.infoTurno.service.subServices[1])">
+						
+							<md-option ng-value="subitem" ng-repeat="subitem in subservicios |filter:{$:sessionItem.turno.infoTurno.service.serviceId}">
+							{{subitem.subServiceName}}
 							</md-option>								
 						</md-select>
 						<span flex></span>
