insersion de varios subservicios cuajado

--- a/public/app/html/Asesor.html
+++ b/public/app/html/Asesor.html
@@ -31,9 +31,6 @@
 	{{asesor.toma}}
 <div>
 <div class="col-md-1">
-	{{sessionItem.turno.infoTurno.services.nombre}}
-
-	{{sessionItem.turno.infoTurno.service}}
-
-	{{sessionItem.turno.infoTurno.service.subServices}}
+	<button ng-click="listo()">listo</button>
+	{{sessionItem.turno.infoTurno.services}}
 </div>
